--- a/style.css
+++ b/style.css
@@ -46,9 +46,9 @@ menu > a {
 }
 
 a:hover {
-    background-color: rgb(67, 1, 121);
+    background-color: rgb(98, 34, 151);
     padding: 2px 2px;
-    border-radius: 15px;
+    border-radius: 5px;
 }
 
 h1 {
@@ -58,7 +58,7 @@ h1 {
 }
 
 h1 > a {
-    color: rgb(252, 255, 69);
+    color: white;
     text-align: center;
     text-decoration: none;
 }
@@ -125,19 +125,30 @@ main {
 }
 
 .ver{
-    text-decoration: none;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
+.ver:hover{
+    background-color: rgba(200, 200, 200, 0.2);
+    border-radius: 10px;
+}
 
 .ver>a{
-    color: white;
+    color: black;
+}
+
+button, button:focus, button:active {
+    margin-top: 10px;
+    outline: none;
+    box-shadow: none;
+    border: none;
 }
 
 /*PAGINA DO PRODUTO*/
 
 .produto-detalhe {
-    background-color: rgb(179, 179, 179);
+    background-color: rgb(216, 216, 216);
     border-radius: 2vh;
     text-align: center;
     padding: 20px;
@@ -152,7 +163,7 @@ button {
     background-color: rgb(67, 1, 121);
     color: white;
     padding: 10px 15px;
-    border-radius: 2vw;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
 }
@@ -175,4 +186,23 @@ button:hover {
     text-align: left;
     margin: 0px 0px 10px 5px;
     padding-bottom: 10px;
+}
+
+
+/*BOTAO DO CARRINHO*/
+#botao-carrinho {
+    position: fixed; /*Deixa fixado*/
+    bottom: 20px; /*deixa a div em baixo*/
+    right: 20px; /*deixa a div para direita*/
+    background-color: rgb(77, 0, 139); /*cor de fundo*/
+    color: white; /*cor da letra*/
+    padding: 10px 15px; /*largura e altura do contorno*/
+    border-radius: 50px; /*borda redonda*/
+    text-decoration: none; /*decoração do texto, linhas embaixo, etc.*/
+    font-weight: bold; /*Letra maior*/
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /*sombra bem beeeem minima*/
+}
+
+#botao-carrinho:hover {
+    background-color: rgb(98, 34, 151); /*cor de fundo ao passar o mouse em cima*/
 }
